--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,10 @@
 {
     "/js/app.js": "/js/app.js",
+    "/js/bootstrap.js": "/js/bootstrap.js",
+    "/js/sb-admin-2.js": "/js/sb-admin-2.js",
+    "/js/sb-admin-2.min.js": "/js/sb-admin-2.min.js",
     "/css/estilos.css": "/css/estilos.css",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/css/sb-admin-2.min.css": "/css/sb-admin-2.min.css",
+    "/css/sb-admin-2.css": "/css/sb-admin-2.css"
 }
