--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,3 @@
-/node_modules
-/public/hot
-/public/storage
-/storage/*.key
-/vendor
-.env
-.env.backup
-.phpunit.result.cache
-Homestead.json
-Homestead.yaml
-npm-debug.log
-yarn-error.log
-/.idea
-/.vscode
-
 ## Mega
 .debris
 Rubbish
@@ -40,3 +25,4 @@ public/css
 .env
 
 /database
+*lock*
